# Predicting-Heart-Disease

./: .gitignore  README.md  pyproject.toml
config/: model.yaml  schema.yaml
notebooks/: 01_exploratory_analysis.ipynb  02_modelling.ipynb  exploratory_analysis.ipynb
src/heart_disease/: __init__.py  config.py  dataset.py  features.py  plots.py
src/heart_disease/modeling/: predict.py  train.py
tests/: conftest.py  test_dataset.py  test_features.py
