[project]
name = "predicting-heart-disease"
version = "0.1.0"
description = "Exploring and modeling Heart Disease data to predict the presence of heart disease based on clinical features."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "notebook>=7.5.3",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "protobuf>=3.21,<5",
    "pystats>=0.1.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "setuptools<81",
    "statsmodels>=0.14.6",
    "xgboost>=3.2.0",
]
